--- a/completions01.ipynb
+++ b/completions01.ipynb
@@ -47,20 +47,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "言語モデルを使う上でのポイントは，\n",
-      "「どのニュースを使うか」にある．\n",
-      "単にニュースを多く使えば良いというわけではない．\n",
-      "例えば，あるランキングを形成する基準を，\n",
-      "ランキングに加えるニュースがどれも共通して満たすとして，\n",
-      "上位 4~\n",
-      "位までのニュースを使って 1~\n",
-      "位を予測する，というのが良い (参考文献~\\ref{list:gensim-news-crawl})．\n",
-      "過学習を防ぐ意味でも．\n",
+      "言語モデルを使う上でのポイントは、下記の点が重要であることです。\n",
       "\n",
-      "また，言語モデルを使う上での重要な点の1つが，\n",
-      "言語モデルは共起確率ではなく条件付き確率であるという具体例を挙げる (参考文献~\\ref{list:word-cooccur})．\n",
-      "単語共起を使った手法ではなく，単語の順序だけを使った手法として言語モデルがある．\n",
-      "言語モデルに平文で使える言語\n"
+      "- **現実世界のオーダーでトレーニングデータのオーダーを調整**する。<br>\n",
+      "事前に用意した比較的大きなテキストデータからトレーニング用のデータを切り出す際には、比較的おおきなテキストリストを一度に学習するよう並び替え、随時大きなミニバッチを作成してメモリに流し込みます。ただし、この場合、メモリサイズやトレーニングのコンピューティングパワーが厳しくなる可能性があります。そのような場合ライブラリー内で、テキストデータの一部をシャッフルランダムにしてテキストデータの一部だけを使用するようにしたりすると、コンピューターの利用能力をさらに減らすことが可能です。\n",
+      "\n",
+      "- **順方向と逆方向のモデル\n"
      ]
     }
    ],
@@ -99,14 +91,14 @@
      "text": [
       "、\n",
       "\n",
-      "1. データセットの準備\n",
-      "言語モデルの学習には、豊富な量のテキストデータが必要です。そのため、使いたい言語のデータセットを収集することが重要です。\n",
+      "1. テキストデータの収集と前処理\n",
+      "言語モデルを学習させるためには、多くのテキストデータが必要です。そのため、まずは大量のテキストデータを収集し、前処理を行う必要があります。前処理には、テキストのクレンジングやトークナイズ（単語や文に区切る処理）などが含まれます。\n",
       "\n",
       "2. モデルの選択\n",
-      "言語モデルには、大きく分けて事前学習済みモデルと自作モデルの2つがあります。事前学習済みモデルは、すでに大量のテキストデータを用いて学習されたもので、自作モデルはデータセットを用いて学習することで作成されます。どちらを用いるかは、そのプロジェクトの目的やデータセットの規模などによって選択する必要があります。\n",
+      "言語モデルには様々な種類がありますが、どのモデルを選択するかは、使用するデータやタスクによって異なります。また、モデルの精度や適用範囲も異なるため、目的に合ったモデルを選択することが重要です。\n",
       "\n",
-      "3. データの前処理\n",
-      "言語モデルの学習には、データの前処理が重要です。不要な文字や単語\n"
+      "3. モデルの学習\n",
+      "言語モデルを実際に学習する際には、適切なハイ\n"
      ]
     }
    ],
@@ -149,12 +141,16 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "、「大量のデータを使った学習をすること」です。  \n",
-      "この項目では、まず言語モデルを学習するための訓\n",
-      "--------------------\n",
-      "、不自然な文章を使わないという点です。\n",
+      "、以下のとおりです。\n",
       "\n",
-      "まず、ここで言う「不自然な文章」とは、人間の言葉で表すとどういった\n",
+      "> - **前向き確率**を求めることで生成対象となる文章が生成できます。\n",
+      "> $$\n",
+      "P(w_1,w_2,w\n",
+      "--------------------\n",
+      "following：\n",
+      "\n",
+      "### 1.双方向RNNを使うべき\n",
+      "入力一単語だけを考えても単語の一つ一つの前後からそれぞれ\n",
       "CompletionUsage(completion_tokens=100, prompt_tokens=17, total_tokens=117)\n"
      ]
     }
@@ -197,15 +193,17 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "、以下の3つです。\n",
+      "次の3つです。\n",
       "\n",
-      "1. トークナイザ：文章を単語や文節に分割する。どのようなトークナイザを使うか\n",
+      "1. 学習データの用意\n",
+      "2. 多様性のある文章の生成\n",
+      "3. 多様性の評価\n",
+      "\n",
+      "1\n",
       "--------------------\n",
-      "2つ\n",
-      "\n",
-      "1つ目は「データセットを多くすること」である。\n",
-      "言語モデルの良い性能を得るためには、豊富で\n",
-      "CompletionUsage(completion_tokens=200, prompt_tokens=17, total_tokens=217)\n"
+      "２つあります。\n",
+      "一つ目は、言語モデルの拡張性です。言語モデルは、新しい言語データが与えられた場\n",
+      "CompletionUsage(completion_tokens=199, prompt_tokens=17, total_tokens=216)\n"
      ]
     }
    ],
@@ -247,7 +245,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "稲崎です！ 先週までは天気も良いと思ったらまた雨で、寒かったのに今週の火曜日はずっと雨でドシャ降りの寒い一日になりました(;´∀｀)本当に突然。。。大量の雨が降りましたよね！！ 今\n"
+      "OKチョコです。\n",
+      "\n",
+      "こんにちは！OKチョコです。\n",
+      "\n",
+      "【Q】著者は間もなく、外国に行く予定です！！\n",
+      "\n",
+      "それは素晴らしいですね！外国に行くと新しい文化や言語、風景を体験できてとても楽しいと思います。準備はしっかりとして、\n"
      ]
     }
    ],
@@ -289,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ bytes:\\xe7\\xa8 ] [ bytes:\\xb2 ] [ bytes:\\xe5 ] [ bytes:\\xb4 ] [ bytes:\\x8e ] [ です ] [ ！ ] [ bytes: \\xe5\\x85 ] [ bytes:\\x88 ] [ bytes:\\xe9\\x80 ] [ bytes:\\xb1 ] [ ま ] [ では ] [ 天 ] [ 気 ] [ も ] [ bytes:\\xe8\\x89 ] [ bytes:\\xaf ] [ い ] [ と ] [ 思 ] [ っ ] [ た ] [ ら ] [ また ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ で ] [ 、 ] [ bytes:\\xe5\\xaf ] [ bytes:\\x92 ] [ か ] [ っ ] [ た ] [ の ] [ に ] [ 今 ] [ bytes:\\xe9\\x80 ] [ bytes:\\xb1 ] [ の ] [ 火 ] [ bytes:\\xe6\\x9b ] [ bytes:\\x9c ] [ 日 ] [ は ] [ bytes:\\xe3\\x81 ] [ bytes:\\x9a ] [ っ ] [ と ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ で ] [ ド ] [ シ ] [ ャ ] [ bytes:\\xe9\\x99 ] [ bytes:\\x8d ] [ り ] [ の ] [ bytes:\\xe5\\xaf ] [ bytes:\\x92 ] [ い ] [ 一 ] [ 日 ] [ に ] [ な ] [ り ] [ ました ] [ (; ] [ ´ ] [ bytes:\\xe2\\x88 ] [ bytes:\\x80 ] [ bytes:\\xef\\xbd ] [ bytes:\\x80 ] [ ) ] [ 本 ] [ 当 ] [ に ] [ bytes:\\xe7\\xaa ] [ bytes:\\x81 ] [ 然 ] [ 。。 ] [ 。 ] [ 大 ] [ 量 ] [ の ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ が ] [ bytes:\\xe9\\x99 ] [ bytes:\\x8d ] [ り ] [ ました ] [ よ ] [ bytes:\\xe3\\x81 ] [ bytes:\\xad ] [ ！！ ] [   ] [ 今 ] [ bytes:\\xe9\\x80 ] "
+      "[ OK ] [ チ ] [ ョ ] [ コ ] [ です ] [ 。 ] [ こんにちは ] [ ！ ] [ OK ] [ チ ] [ ョ ] [ コ ] [ です ] [ 。 ] [ 【 ] [ Q ] [ 】 ] [ bytes:\\xe8 ] [ bytes:\\x91 ] [ bytes:\\x97 ] [ 者 ] [ は ] [ 間 ] [ も ] [ な ] [ く ] [ 、 ] [ 外 ] [ 国 ] [ に ] [ 行 ] [ く ] [ bytes:\\xe4\\xba ] [ bytes:\\x88 ] [ 定 ] [ です ] [ ！！ ] [ それ ] [ は ] [ 素 ] [ bytes:\\xe6\\x99 ] [ bytes:\\xb4 ] [ ら ] [ し ] [ い ] [ です ] [ bytes:\\xe3\\x81 ] [ bytes:\\xad ] [ ！ ] [ 外 ] [ 国 ] [ に ] [ 行 ] [ く ] [ と ] [ 新 ] [ し ] [ い ] [ 文 ] [ 化 ] [ や ] [ 言 ] [ bytes:\\xe8\\xaa ] [ bytes:\\x9e ] [ 、 ] [ bytes:\\xe9\\xa2 ] [ bytes:\\xa8 ] [ 景 ] [ を ] [ 体 ] [ bytes:\\xe9 ] [ bytes:\\xa8 ] [ bytes:\\x93 ] [ で ] [ き ] [ て ] [ と ] [ て ] [ も ] [ bytes:\\xe6\\xa5 ] [ bytes:\\xbd ] [ し ] [ い ] [ と ] [ 思 ] [ います ] [ 。 ] [ bytes:\\xe6\\xba ] [ bytes:\\x96 ] [ bytes:\\xe5 ] [ bytes:\\x82 ] [ bytes:\\x99 ] [ は ] [ bytes:\\xe3\\x81\\x97\\xe3\\x81 ] [ bytes:\\xa3 ] [ か ] [ り ] [ と ] [ して ] [ 、 ] "
      ]
     }
    ],
@@ -307,7 +311,7 @@
     {
      "data": {
       "text/plain": [
-       "[-9999.0, -0.36752188, -1.7257777, -4.484301, -5.419287e-05]"
+       "[-9999.0, -9999.0, -3.2188334, -0.67568845, -1.1758041]"
       ]
      },
      "execution_count": 9,
@@ -329,18 +333,12 @@
      "data": {
       "text/plain": [
        "[{'\\n': -1.2493514, '\\n\\n': -1.9412345, '私': -2.8816147},\n",
-       " {'bytes:\\\\xb2': -0.36752188,\n",
-       "  'bytes:\\\\xbc': -1.8853976,\n",
-       "  'bytes:\\\\xae': -2.3355508},\n",
-       " {'bytes:\\\\xe8': -1.6830589,\n",
-       "  'bytes:\\\\xe5': -1.7257777,\n",
-       "  'bytes:\\\\xe6\\\\x9d': -2.5654955},\n",
-       " {'bytes:\\\\x9e': -0.0988128,\n",
-       "  'bytes:\\\\xa6': -2.773198,\n",
-       "  'bytes:\\\\xb6': -4.2145944},\n",
-       " {'bytes:\\\\x8e': -5.419287e-05,\n",
-       "  'bytes:\\\\x87': -10.315457,\n",
-       "  'bytes:\\\\x97': -11.621781}]"
+       " {'です': -0.9998541, 'I': -2.9841642, 'Wave': -3.4134445},\n",
+       " {'bytes:\\\\xe3\\\\x83\\\\xbc\\\\xe3\\\\x83': -0.81417227,\n",
+       "  'ャ': -1.4873176,\n",
+       "  'ェ': -2.1293902},\n",
+       " {'コ': -0.67568845, 'イ': -2.2441642, 'ッ': -2.6662033},\n",
+       " {'です': -1.1758041, 'レ': -1.2034893, 'ラ': -3.4258327}]"
       ]
      },
      "execution_count": 10,
@@ -377,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
