--- a/finetuning01.ipynb
+++ b/finetuning01.ipynb
@@ -25,7 +25,7 @@
     "client = OpenAI(api_key=os.environ['API_KEY'])\n",
     "\n",
     "# モデル名\n",
-    "model_name = \"gpt-3.5-turbo-1106\""
+    "model_name = \"gpt-3.5-turbo\""
    ]
   },
   {
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "FileObject(id='file-qFTR3S62dUOyCiSgyFnPYBvX', bytes=1122, created_at=1713835876, filename='training.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
+       "FileObject(id='file-URwxTOD3lfGosEOFExxd0nLw', bytes=1122, created_at=1714094068, filename='training.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
       ]
      },
      "execution_count": 5,
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs='auto', batch_size='auto', learning_rate_multiplier='auto'), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='validating_files', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
+       "FineTuningJob(id='ftjob-ANXwpZTxixF3Bw14g9shpPe8', created_at=1714094120, error=Error(code=None, message=None, param=None), fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs='auto', batch_size='auto', learning_rate_multiplier='auto'), model='gpt-3.5-turbo-0125', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], seed=1278756182, status='validating_files', trained_tokens=None, training_file='file-URwxTOD3lfGosEOFExxd0nLw', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
    "source": [
     "# ファインチューニングジョブの開始\n",
     "client.fine_tuning.jobs.create(\n",
-    "  training_file = \"file-7WHeNOxALRxBQPrk7PKPHwPE\", \n",
+    "  training_file = \"file-URwxTOD3lfGosEOFExxd0nLw\", \n",
     "  model = model_name\n",
     ")"
    ]
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='running', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)], object='list', has_more=False)"
+       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-ANXwpZTxixF3Bw14g9shpPe8', created_at=1714094120, error=Error(code=None, message=None, param=None), fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-0125', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], seed=1278756182, status='running', trained_tokens=None, training_file='file-URwxTOD3lfGosEOFExxd0nLw', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=1714094430), FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=Error(code=None, message=None, param=None), fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], seed=None, status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=None)], object='list', has_more=False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,37 +228,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='running', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
+       "FineTuningJob(id='ftjob-ANXwpZTxixF3Bw14g9shpPe8', created_at=1714094120, error=Error(code=None, message=None, param=None), fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-0125', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], seed=1278756182, status='running', trained_tokens=None, training_file='file-URwxTOD3lfGosEOFExxd0nLw', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=1714094449)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Retrieve the state of a fine-tune\n",
-    "client.fine_tuning.jobs.retrieve(\"ftjob-RUV9KV8LRt0a4kMaanI2laLF\")"
+    "client.fine_tuning.jobs.retrieve(\"ftjob-ANXwpZTxixF3Bw14g9shpPe8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)], object='list', has_more=False)"
+       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-ANXwpZTxixF3Bw14g9shpPe8', created_at=1714094120, error=Error(code=None, message=None, param=None), fine_tuned_model='ft:gpt-3.5-turbo-0125:personal::9I4Xm8Rw', finished_at=1714094397, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-0125', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-g13Q3me3yBvGXAJMoRgu6tIp'], seed=1278756182, status='succeeded', trained_tokens=1970, training_file='file-URwxTOD3lfGosEOFExxd0nLw', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=None), FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=Error(code=None, message=None, param=None), fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], seed=None, status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=None)], object='list', has_more=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,23 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
+       "FineTuningJob(id='ftjob-ANXwpZTxixF3Bw14g9shpPe8', created_at=1714094120, error=Error(code=None, message=None, param=None), fine_tuned_model='ft:gpt-3.5-turbo-0125:personal::9I4Xm8Rw', finished_at=1714094397, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-0125', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-g13Q3me3yBvGXAJMoRgu6tIp'], seed=1278756182, status='succeeded', trained_tokens=1970, training_file='file-URwxTOD3lfGosEOFExxd0nLw', validation_file=None, integrations=[], user_provided_suffix=None, estimated_finish=None)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Retrieve the state of a fine-tune\n",
-    "client.fine_tuning.jobs.retrieve(\"ftjob-RUV9KV8LRt0a4kMaanI2laLF\")"
+    "client.fine_tuning.jobs.retrieve(\"ftjob-ANXwpZTxixF3Bw14g9shpPe8\")"
    ]
   },
   {
@@ -299,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "イライラする/イラつく\n"
+      "イライラする\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
     "\n",
     "# APIへリクエスト\n",
     "response = client.chat.completions.create(\n",
-    "  model=\"ft:gpt-3.5-turbo-1106:personal::8eHyTOMW\",\n",
+    "  model=\"ft:gpt-3.5-turbo-0125:personal::9I4Xm8Rw\",\n",
     "  messages=[\n",
     "    {\"role\": \"user\", \"content\": content}\n",
     "  ]\n",
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
