--- a/function01.ipynb
+++ b/function01.ipynb
@@ -27,7 +27,7 @@
     "client = OpenAI(api_key=os.environ['API_KEY'])\n",
     "\n",
     "# モデル名\n",
-    "model_name = \"gpt-3.5-turbo-1106\""
+    "model_name = \"gpt-3.5-turbo-0125\""
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-9GxrPGfv8PnpRb9jl8xa2erMtLqwa', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_PHRRqkCsvorw68TWO9O5xmcS', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1713830379, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_77a673219d', usage=CompletionUsage(completion_tokens=33, prompt_tokens=161, total_tokens=194))"
+       "ChatCompletion(id='chatcmpl-9I4F4BZ6TzKTpuBIujRUtEUFUlznE', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_Zs4uqY5Fs51xgwOlPFkzZMaQ', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"M\"}', name='get_search_result'), type='function')]))], created=1714093238, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3b956da36b', usage=CompletionUsage(completion_tokens=33, prompt_tokens=161, total_tokens=194))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}'"
+       "'{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"M\"}'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
