--- a/function02.ipynb
+++ b/function02.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "client = OpenAI(api_key=os.environ['API_KEY'])\n",
     "\n",
     "# モデル名\n",
-    "model_name = \"gpt-3.5-turbo-1106\"\n",
+    "model_name = \"gpt-3.5-turbo-0125\"\n",
     "\n",
     "google_cse_id = os.environ['GOOGLE_CSE_ID']\n",
     "google_api_key = os.environ['GOOGLE_API_KEY']"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,11 +75,11 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "東京駅周辺・丸の内でおすすめのイベント｜レッツエンジョイ東京 東京駅周辺・丸の内でおすすめのイベント · かごしま遊楽館 / 千代田区立日比谷図書文化館 / 都立東綾瀬公園 / 楠木正成像 / 綾瀬駅（東京メトロ） / 日比谷駅（東京メトロ ...\n",
-      "--------------------\n",
       "東京キャラクターストリート特設 ｜ 東京駅一番街 東京キャラクターストリート内の「いちばんプラザ」やワゴンショップなど期間限定ショップやイベントも開催中！ いつも楽しいワクワクを集めてみなさまのお越しを ...\n",
       "--------------------\n",
-      "東京駅(東京都)周辺のイベント｜ウォーカープラス 東京駅(東京都)周辺で開催されるイベント情報9件をお届けします。今日開催されているイベントはもちろん、週末の「どこ行こう」に役立つ情報が満載！\n"
+      "東京駅周辺・丸の内でおすすめのイベント｜レッツエンジョイ東京 東京駅周辺・丸の内でおすすめのイベント · 東京都 中央区. YAESU BIG HOLIDAY～親子で楽しむ11日間～ · 東京都 千代田区. 丸の内ハウス 17TH ANNIVERSARY · 東京都 中央区.\n",
+      "--------------------\n",
+      "イベント&ニュース ｜ 東京駅一番街 イベント&ニュース · ウルトラマンワールドM78 スペシャル缶バッジプレゼントキャペーン. EVENT · 大谷翔平＆デコピンPOPUP SHOP. EVENT · MINECRAFT POP UP STORE · 山 ...\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-8eFyk8dTZMTe5nKRQInFaO1lfkSgW', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_d6wBsnCxvQP412p0GZf5fweu', function=Function(arguments='{\"keyword\":\"東京駅 イベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1704605234, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_cbe4fa03fe', usage=CompletionUsage(completion_tokens=33, prompt_tokens=135, total_tokens=168))"
+       "ChatCompletion(id='chatcmpl-9I4HlxDk4S6ui2g0nVZ3RyZVagmnv', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_80IPllaHH2KkpxmxJfJZ9vdQ', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1714093405, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3b956da36b', usage=CompletionUsage(completion_tokens=33, prompt_tokens=135, total_tokens=168))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"keyword\":\"東京駅 イベント\",\"when\":1,\"unit\":\"m\"}'"
+       "'{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,13 +198,12 @@
      "output_type": "stream",
      "text": [
       "関数名：get_search_result\n",
-      "引数：{'keyword': '東京駅 イベント', 'when': 1, 'unit': 'm'}\n",
-      "関数の実行結果：{\"result\": [{\"title\": \"\\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8\\uff5c\\u30ec\\u30c3\\u30c4\\u30a8\\u30f3\\u30b8\\u30e7\\u30a4\\u6771\\u4eac \\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8 \\u00b7 \\u304b\\u3054\\u3057\\u307e\\u904a\\u697d\\u9928 / \\u5343\\u4ee3\\u7530\\u533a\\u7acb\\u65e5\\u6bd4\\u8c37\\u56f3\\u66f8\\u6587\\u5316\\u9928 / \\u90fd\\u7acb\\u6771\\u7dbe\\u702c\\u516c\\u5712 / \\u6960\\u6728\\u6b63\\u6210\\u50cf / \\u7dbe\\u702c\\u99c5\\uff08\\u6771\\u4eac\\u30e1\\u30c8\\u30ed\\uff09 / \\u65e5\\u6bd4\\u8c37\\u99c5\\uff08\\u6771\\u4eac\\u30e1\\u30c8\\u30ed\\u00a0...\"}, {\"title\": \"\\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\u00b7 New! \\u30a6\\u30eb\\u30c8\\u30e9\\u30de\\u30f3\\u30ef\\u30fc\\u30eb\\u30c9M78 \\u30b9\\u30da\\u30b7\\u30e3\\u30eb\\u7f36\\u30d0\\u30c3\\u30b8\\u30d7\\u30ec\\u30bc\\u30f3\\u30c8\\u30ad\\u30e3\\u30da\\u30fc\\u30f3 \\u00b7 New! \\u00b7 MINECRAFT POP UP STORE \\u00b7 \\u5c71\\u30ce\\u30c1\\u30fc\\u30ba \\u00b7 \\u300c\\u5200\\u5263\\u4e71\\u821e\\u300d POPUP SHOP\\u00a0...\"}, {\"title\": \"\\u5927\\u4e38\\u6771\\u4eac\\u5e97 \\u3008\\u6771\\u4eac\\u3070\\u306a\\u5948STUDIO\\u30094\\u67083\\u65e5(\\u6c34)\\u304b\\u3089\\u306e\\u958b\\u5e97\\u524d\\u304a\\u4e26\\u3073\\u5217\\u3054\\u6848\\u5185 \\u00b7 \\u6771\\u4eac\\u99c5\\u516b\\u91cd\\u6d32\\u30d1\\u30fc\\u30ad\\u30f3\\u30b0\\u897f\\u99d0\\u8eca\\u5834\\u30fb\\u6771\\u99d0\\u8eca\\u5834\\u306b\\u304a\\u3051\\u308b\\u304a\\u8cb7\\u3044\\u3042\\u3052\\u30b5\\u30fc\\u30d3\\u30b9\\u306e\\u3054\\u6848\\u5185 \\u00b7 \\u5927\\u4e38\\u30fb\\u677e\\u5742\\u5c4b\\u30a2\\u30d7\\u30ea\\u00a0...\"}]}\n",
-      "最近1ヶ月以内の東京駅周辺のイベントについての検索結果は以下の通りです。\n",
-      "\n",
-      "1. 東京駅周辺で開催されるイベントの情報が掲載されています。 \n",
-      "2. 東京駅一番街にて、ウルトラマンワールドM78、スペシャル缶バッジプレゼントキャンペーン、MINECRAFT POP UP STORE、山の茶屋などのイベントが開催されています。 \n",
-      "3. 東京駅八重洲口や東京駅新幹線プラットホームでのお買い物をご案内するお知らせです。\n"
+      "引数：{'keyword': '東京駅のイベント', 'when': 1, 'unit': 'm'}\n",
+      "関数の実行結果：{\"result\": [{\"title\": \"\\u6771\\u4eac\\u30ad\\u30e3\\u30e9\\u30af\\u30bf\\u30fc\\u30b9\\u30c8\\u30ea\\u30fc\\u30c8\\u7279\\u8a2d \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u6771\\u4eac\\u30ad\\u30e3\\u30e9\\u30af\\u30bf\\u30fc\\u30b9\\u30c8\\u30ea\\u30fc\\u30c8\\u5185\\u306e\\u300c\\u3044\\u3061\\u3070\\u3093\\u30d7\\u30e9\\u30b6\\u300d\\u3084\\u30ef\\u30b4\\u30f3\\u30b7\\u30e7\\u30c3\\u30d7\\u306a\\u3069\\u671f\\u9593\\u9650\\u5b9a\\u30b7\\u30e7\\u30c3\\u30d7\\u3084\\u30a4\\u30d9\\u30f3\\u30c8\\u3082\\u958b\\u50ac\\u4e2d\\uff01 \\u3044\\u3064\\u3082\\u697d\\u3057\\u3044\\u30ef\\u30af\\u30ef\\u30af\\u3092\\u96c6\\u3081\\u3066\\u307f\\u306a\\u3055\\u307e\\u306e\\u304a\\u8d8a\\u3057\\u3092\\u00a0...\"}, {\"title\": \"\\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8\\uff5c\\u30ec\\u30c3\\u30c4\\u30a8\\u30f3\\u30b8\\u30e7\\u30a4\\u6771\\u4eac \\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8 \\u00b7 \\u6771\\u4eac\\u90fd \\u4e2d\\u592e\\u533a. YAESU BIG HOLIDAY\\uff5e\\u89aa\\u5b50\\u3067\\u697d\\u3057\\u308011\\u65e5\\u9593\\uff5e \\u00b7 \\u6771\\u4eac\\u90fd \\u5343\\u4ee3\\u7530\\u533a. \\u4e38\\u306e\\u5185\\u30cf\\u30a6\\u30b9 17TH ANNIVERSARY \\u00b7 \\u6771\\u4eac\\u90fd \\u4e2d\\u592e\\u533a.\"}, {\"title\": \"\\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\u00b7 \\u30a6\\u30eb\\u30c8\\u30e9\\u30de\\u30f3\\u30ef\\u30fc\\u30eb\\u30c9M78 \\u30b9\\u30da\\u30b7\\u30e3\\u30eb\\u7f36\\u30d0\\u30c3\\u30b8\\u30d7\\u30ec\\u30bc\\u30f3\\u30c8\\u30ad\\u30e3\\u30da\\u30fc\\u30f3. EVENT \\u00b7 \\u5927\\u8c37\\u7fd4\\u5e73\\uff06\\u30c7\\u30b3\\u30d4\\u30f3POPUP SHOP. EVENT \\u00b7 MINECRAFT POP UP STORE \\u00b7 \\u5c71\\u00a0...\"}]}\n",
+      "最近1ヶ月以内の東京駅のイベントについて以下の情報が見つかりました:\n",
+      "1. 東京駅一番街の「いちばんプラザ」やワゴンショップなどで期間限定のショップやイベントが開催されています。\n",
+      "2. 東京駅周辺や丸の内で様々なイベントが開催されており、お子様向けの楽しい11日間や、17周年を迎えるイベントが予定されています。\n",
+      "3. 東京駅一番街のイベント&ニュースでは、ウエルタマンワールドM78 スペシャルホリデーバージョンや、大谷涼平&デコピンPOPUP SHOPなどのイベントが開催されます。他にもMINECRAFT POP UP STOREや山・・・　(情報が途切れています)\n"
      ]
     }
    ],
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,11 +304,11 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "「Happy Holi！」NYに春の訪れを告げるお祭り\n",
+      "弟は「型抜き」で散財。一方、姉は…？お祭りから見る姉弟の違いがおもしろい！“昭和の子どもあるある”を描くノスタルジック漫画\n",
       "--------------------\n",
-      "祭りで企業や商品をPR｜株式会社オマツリジャパン\n",
+      "リオ、ベネチア…「行ってみたい海外のお祭りランキング」TOP10 | サライ.jp｜小学館の雑誌『サライ』公式サイト\n",
       "--------------------\n",
-      "ふれあい中央 カーニバル（神戸市中央区のお祭り） - はぎわら泰三（ハギワラタイゾウ） ｜ 選挙ドットコム\n"
+      "お祭りを楽しむ“ゼイユ＆スグリ”のプレイマットも！『ポケカ』4月26日発売の「周辺グッズ」まとめ\n"
      ]
     }
    ],
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-9GyoKYwwKiOqjJfoRCA6Ji7pfGaeH', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_CQhEIvDHXxffGgzDF8fObvLy', function=Function(arguments='{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}', name='get_news'), type='function')]))], created=1713834032, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_77a673219d', usage=CompletionUsage(completion_tokens=25, prompt_tokens=187, total_tokens=212))"
+       "ChatCompletion(id='chatcmpl-9I4JQB1X25izHt93O4vkMncQkt7pf', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_aqNnA8oVQjpTtL13stFEPUCD', function=Function(arguments='{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}', name='get_news'), type='function')]))], created=1714093508, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3b956da36b', usage=CompletionUsage(completion_tokens=25, prompt_tokens=187, total_tokens=212))"
       ]
      },
      "execution_count": 12,
@@ -418,16 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-8eGMPkDTObpmHLxFg4GXO5jLU9X0n', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_isGvMM3hSd4SIR445nLLPmyf', function=Function(arguments='{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}', name='get_news'), type='function')]))], created=1704606701, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_cbe4fa03fe', usage=CompletionUsage(completion_tokens=25, prompt_tokens=187, total_tokens=212))"
+       "ChatCompletion(id='chatcmpl-9I4JQB1X25izHt93O4vkMncQkt7pf', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_aqNnA8oVQjpTtL13stFEPUCD', function=Function(arguments='{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}', name='get_news'), type='function')]))], created=1714093508, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3b956da36b', usage=CompletionUsage(completion_tokens=25, prompt_tokens=187, total_tokens=212))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +446,7 @@
        "'{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,18 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "最新のお祭りに関するニュースは以下の通りです。\n",
+      "以下はお祭りに関連する最新のニュースです：\n",
       "\n",
-      "1. 「Happy Holi！」NYに春の訪れを告げるお祭り\n",
-      "2. お祭りで企業や商品をPR｜株式会社オマツリジャパン\n",
-      "3. 仏街中央 カーニバル（神戸市中央区のお祭り） - はぎわ和三（ハギワラタイゾウ）｜選挙ドットコム\n"
+      "1. 「兄は『型抜き』で窃盗。一方、姉は…？お祭りから見る姉弟の違いがおもしろい！“昭和の子ども２人いる2人”を描くノスタルジック漫画\n",
+      "2. リオ、ベネチア…「行ってみたい海外のお祭りランキング」TOP10 | サライ.jp｜小学館の雑誌『サライ』公式サイト\n",
+      "3. お祭りを楽しむ“ハイ＆スグリ”のプレママコーデも！『ポケカ』4月26日発売の「周辺ガチボス」まとめ\n",
+      "\n",
+      "詳細情報や興味がある記事があれば、検索して詳細を確認してみてください。\n"
      ]
     }
    ],
@@ -544,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
