--- a/langchain01.ipynb
+++ b/langchain01.ipynb
@@ -61,7 +61,11 @@
      "text": [
       "\n",
       "\n",
-      "1. データセットの選択: 言語モデルを訓\n"
+      "1. 十分な大きさのコーパスを用意すること：言語モデルの性能は、提供するテキストデータ（コーパス）の量によって大きく左右されるため、コーパスの大きさを最大限にすることが重要です。また、コーパスの多様性も重要であるため、様々なジャンルや分野のテキストデータを用意することが望ましいです。\n",
+      "\n",
+      "2. 適切なトークン化（単語分割）を行うこと：トークン化は、文字列を単語や品詞などの意味を持つ単位に分割することで、言語モデルの学習において重要な役割を果たします。適切なトークン化を行うことで、言語モデルがより正確に単語の意味や文の構造を理解することができます。\n",
+      "\n",
+      "3. 語彙\n"
      ]
     }
    ],
@@ -85,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model_name = \"gpt-3.5-turbo-1106\"\n",
+    "model_name = \"gpt-3.5-turbo-0125\"\n",
     "\n",
     "# モデルの作成\n",
     "chat_model = ChatOpenAI(\n",
@@ -102,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='言語モデルを使用する際にはいくつかのポイントに注意する必要があります。以下にそのポイントをいくつか紹介します。\\n\\n1. データの品質：良質なデータセットを使用することが重要です。言語モデルのパフォーマンスは、使用されるデータの量と品質に大きく依存します。\\n\\n2. ランゲージの選択：特定のプロジェクトやアプリケーションに適した言語モデルを選択することが重要です。一般的な言語モデルと、特定のドメインやタスクに特化した言語モデルとの違いを理解することが重要です。\\n\\n3. ハイパーパラメータのチューニング：言語モデルを訓練する際には、適切なハイパーパラメータを選択してパフォーマンスを最適化する必要があり' response_metadata={'token_usage': {'completion_tokens': 300, 'prompt_tokens': 25, 'total_tokens': 325}, 'model_name': 'gpt-3.5-turbo-1106', 'system_fingerprint': 'fp_77a673219d', 'finish_reason': 'length', 'logprobs': None} id='run-021591b3-75cb-435b-a023-0c267cd69323-0'\n"
+      "content='言語モデルを使用する際のポイントは以下の通りです：\\n\\n1. データの質：言語モデルの性能は、学習に使われるデータの質に大きく依存します。十分な量の多様なデータを用意することが重要です。\\n\\n2. パフォーマンス評価：言語モデルのパフォーマンスを評価するために、適切な指標を選択する必要があります。例えば、パープレキシティ（perplexity）やBLEUスコアなどが使われます。\\n\\n3. ハイパーパラメータの調整：言語モデルには多くのハイパーパラメータが存在し、最適な性能を得るためにはこれらのパラメータを適切に調整する必要があります。\\n\\n4. 訓練時間：言語モデルは一般的に学習に多くの時間がかかります' response_metadata={'token_usage': {'completion_tokens': 300, 'prompt_tokens': 25, 'total_tokens': 325}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_3b956da36b', 'finish_reason': 'length', 'logprobs': None} id='run-3a2c112b-0de3-4e09-a7f7-908bff13b195-0'\n"
      ]
     }
    ],
@@ -167,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "おすすめの昼食は、たこ焼きやお好み焼き、うどんやラーメン、焼きそばやおにぎりなど、たくさんありますやん。んまいもん食べたらええで。\n"
+      "昼食なら、やっぱりお好み焼きやたこ焼きがおすすめやで！美味しいし、ボリュームもあって満足度高いねん。ほかにも、うどんやラーメンもオススメやで！ええ店知っとるから、気になったら教えてくれや。\n"
      ]
     }
    ],
@@ -200,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "そうやなぁ、定番のお弁当やお寿司もおすすめやで。お弁当は手軽に食べられて、種類もたくさんあるから、好きなもんが選べるで。また、お寿司なら新鮮なネタと美味しい酢飯が最高やで。お腹いっぱい食べて、元気になってや～。\n"
+      "ええと、他にもおすすめするとしたら、串カツや焼き鳥、お寿司もええと思うで。関西には美味しいお店がたくさんあるから、ぜひ行ってみてや。気に入った店あったら友達にもオススメしてや。楽しい食べ歩きができるとええなあ。\n"
      ]
     }
    ],
@@ -267,14 +271,11 @@
      "text": [
       "\n",
       "\n",
-      "ステップ1: 目的を明確にする\n",
-      "まず、なぜ英語を勉強するのか、どのようなレベルまで習得したいのかを明確にすることが重要です。具体的な目標を立てることで、効果的な勉強計画を立てることができます。\n",
+      "1. 目的を明確にする：はじめに、なぜ英語を学びたいのか、どのようなレベルを目指すのかを明確にしましょう。英語でできるようになりたいことがはっきりしていれば、それに向けて学習の方向性を決めることができます。\n",
       "\n",
-      "ステップ2: 基礎的な文法を学ぶ\n",
-      "文法は英語学習の基礎となります。初心者の場合は、基本的な文法ルールや品詞、動詞の時制などを学びましょう。一般的な文法書やオンラインコース、動画などを参考にするとよいでしょう。\n",
+      "2. 学習の方法を選ぶ：英語を学ぶ方法は様々あります。例えば、私学や語学学校に通う、オンラインコースを受講する、フラッシュカードやオンライン辞書を活用するなどがあります。自分に合った方法を選びましょう。\n",
       "\n",
-      "ステップ3: 語彙を増やす\n",
-      "英語を上達させるには、多くの語彙を覚えることが必要です。Common wordsやAcademic wordsなど、よく使われる単語や必要な単語を定期的に\n"
+      "3. 基礎の復習をする：英語を学ぶ際に重要なのは基礎をしっかりと固めることです。文法や英単語、発音などの基本的な知識をしっかりと身に付けまし\n"
      ]
     }
    ],
@@ -335,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='私はプログラミングが大好きです。' response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 48, 'total_tokens': 62}, 'model_name': 'gpt-3.5-turbo-1106', 'system_fingerprint': 'fp_b953e4de39', 'finish_reason': 'stop', 'logprobs': None} id='run-1d034251-e5a8-41fa-a7db-6a3028088c39-0'\n"
+      "content='プログラミングが大好きです。' response_metadata={'token_usage': {'completion_tokens': 12, 'prompt_tokens': 48, 'total_tokens': 60}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_3b956da36b', 'finish_reason': 'stop', 'logprobs': None} id='run-8ce3c6c8-d46b-4af8-a965-290857f287fc-0'\n"
      ]
     }
    ],
@@ -377,7 +378,7 @@
      "text": [
       "\n",
       "\n",
-      "aback,abandon,abbey,abcommon,abort,abmulbury,abnormal,abuse,abide,able\n"
+      "apple, actual, Any thing, analyze, anim\n"
      ]
     }
    ],
@@ -397,7 +398,7 @@
     {
      "data": {
       "text/plain": [
-       "['aback,abandon,abbey,abcommon,abort,abmulbury,abnormal,abuse,abide,able']"
+       "['apple', 'actual', 'Any thing', 'analyze', 'anim']"
       ]
      },
      "execution_count": 15,
@@ -498,7 +499,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 小さい\n"
+      " 小さい\n",
+      "\n",
+      "入力: 美しい\n",
+      "出力: 醜い\n"
      ]
     }
    ],
