--- a/langchain02.ipynb
+++ b/langchain02.ipynb
@@ -335,7 +335,7 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model_name = \"gpt-3.5-turbo-1106\"\n",
+    "model_name = \"gpt-3.5-turbo-0125\"\n",
     "\n",
     "# モデルの作成\n",
     "chat_model = ChatOpenAI(\n",
@@ -379,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "お土産の購入率は、「菓子類」が最も高く、次いで「その他食料品・飲料・たばこ」、「衣類」の順で高いことがわかります。特に韓国、台湾、香港、中国の国籍・地域では「菓子類」の購入率が高いことが分かります。また、「宝石・貴金属」の購入者単価も比較的高く、台湾と香港からの観光客にとって高額なお土産の購入が多いことがわかります。\n"
+      "外国人観光客がお土産としてよく購入するアイテムは、「菓子類」（70.4％）、その他では「食料品・飲料・たばこ」（43.4％）が挙げられます。国籍・地域別では、韓国、台湾、香港、中国の訪日外国人が特に菓子類を購入していることがわかります。また、アイテムごとの購入者単価で見ると、「宝石・貴金属」が最も高く、特に台湾と香港の訪日外国人が高価な宝石や貴金属を多く購入していることが分かります。\n"
      ]
     }
    ],
@@ -447,7 +447,7 @@
       "text/plain": [
        "{'input': 'おすすめのプログラミング言語を3つ教えてください',\n",
        " 'history': '',\n",
-       " 'response': '一番人気や機能性を考えると、Python、JavaScript、そしてJavaがおすすめです。Pythonはシンプルで読みやすいコードを書くことができ、データサイエンスや機械学習などの分野でも広く使用されています。JavaScriptはWeb開発に必須の言語であり、フロントエンドやバックエンドの両方で使用されます。Javaは安定性とパフォーマンスに優れており、特に企業アプリケーションやAndroidアプリの開発に使用されています。ご質問がありましたらお知らせください。'}"
+       " 'response': 'Sure! おすすめのプログラミング言語は、まず最初にPythonです。Pythonはシンプルで読みやすい文法を持ち、幅広い用途に使われています。次に、JavaScriptもおすすめです。Web開発やフロントエンド開発など幅広い分野で使用されており、大規模なアプリケーションも構築できます。最後に、Javaもおすすめです。Javaは堅牢で安定したプログラミング言語であり、エンタープライズアプリケーションやAndroidアプリの開発に適しています。どれも人気で広く使われている言語の一部です。他にも質問があればお知らせくださいね。'}"
       ]
      },
      "execution_count": 17,
@@ -476,7 +476,7 @@
       "\n",
       "Current conversation:\n",
       "Human: おすすめのプログラミング言語を3つ教えてください\n",
-      "AI: 一番人気や機能性を考えると、Python、JavaScript、そしてJavaがおすすめです。Pythonはシンプルで読みやすいコードを書くことができ、データサイエンスや機械学習などの分野でも広く使用されています。JavaScriptはWeb開発に必須の言語であり、フロントエンドやバックエンドの両方で使用されます。Javaは安定性とパフォーマンスに優れており、特に企業アプリケーションやAndroidアプリの開発に使用されています。ご質問がありましたらお知らせください。\n",
+      "AI: Sure! おすすめのプログラミング言語は、まず最初にPythonです。Pythonはシンプルで読みやすい文法を持ち、幅広い用途に使われています。次に、JavaScriptもおすすめです。Web開発やフロントエンド開発など幅広い分野で使用されており、大規模なアプリケーションも構築できます。最後に、Javaもおすすめです。Javaは堅牢で安定したプログラミング言語であり、エンタープライズアプリケーションやAndroidアプリの開発に適しています。どれも人気で広く使われている言語の一部です。他にも質問があればお知らせくださいね。\n",
       "Human: 1つ目のプログラミング言語の名前は何ですか？\n",
       "AI:\u001b[0m\n",
       "\n",
@@ -487,8 +487,8 @@
      "data": {
       "text/plain": [
        "{'input': '1つ目のプログラミング言語の名前は何ですか？',\n",
-       " 'history': 'Human: おすすめのプログラミング言語を3つ教えてください\\nAI: 一番人気や機能性を考えると、Python、JavaScript、そしてJavaがおすすめです。Pythonはシンプルで読みやすいコードを書くことができ、データサイエンスや機械学習などの分野でも広く使用されています。JavaScriptはWeb開発に必須の言語であり、フロントエンドやバックエンドの両方で使用されます。Javaは安定性とパフォーマンスに優れており、特に企業アプリケーションやAndroidアプリの開発に使用されています。ご質問がありましたらお知らせください。',\n",
-       " 'response': '一つ目のプログラミング言語の名前はPythonです。Pythonはシンプルで読みやすいコードを書くことができ、データサイエンスや機械学習などの分野でも広く使用されています。'}"
+       " 'history': 'Human: おすすめのプログラミング言語を3つ教えてください\\nAI: Sure! おすすめのプログラミング言語は、まず最初にPythonです。Pythonはシンプルで読みやすい文法を持ち、幅広い用途に使われています。次に、JavaScriptもおすすめです。Web開発やフロントエンド開発など幅広い分野で使用されており、大規模なアプリケーションも構築できます。最後に、Javaもおすすめです。Javaは堅牢で安定したプログラミング言語であり、エンタープライズアプリケーションやAndroidアプリの開発に適しています。どれも人気で広く使われている言語の一部です。他にも質問があればお知らせくださいね。',\n",
+       " 'response': '1つ目のプログラミング言語はPythonです。'}"
       ]
      },
      "execution_count": 18,
@@ -524,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
